most of eslint errors corrected

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
     "react/jsx-filename-extension": [0],
     "no-tabs": [0],
     "no-mixed-spaces-and-tabs": [0],
-    //"linebreak-style": [2, "windows"],
+    "linebreak-style": [2, "windows"],
     "object-curly-newline": "off"
   }
 }
