--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "no-mixed-spaces-and-tabs": [0],
     // "linebreak-style": [2, "windows"],
     "object-curly-newline": "off",
-    "react/jsx-one-expression-per-line": "off"
+    "react/jsx-one-expression-per-line": "off",
+    "no-await-in-loop": "off"
   }
 }
