--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-share": "^4.1.0"
+    "react-share": "^4.1.0",
+    "react-switch": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
